[gd_scene load_steps=5 format=2]

[ext_resource path="res://snake_piece.tscn" type="PackedScene" id=1]
[ext_resource path="res://snake.gd" type="Script" id=2]
[ext_resource path="res://audio/snake_move.wav" type="AudioStream" id=3]
[ext_resource path="res://audio/snake_hit_wall.wav" type="AudioStream" id=4]

[node name="Snake" type="YSort"]
script = ExtResource( 2 )

[node name="MoveTween" type="Tween" parent="."]

[node name="RayCasts" type="Node2D" parent="."]

[node name="Down" type="RayCast2D" parent="RayCasts"]
position = Vector2( 32, 0 )
enabled = true
cast_to = Vector2( 0, 32 )

[node name="Up" type="RayCast2D" parent="RayCasts"]
position = Vector2( 32, -64 )
enabled = true
cast_to = Vector2( 0, -32 )

[node name="Right" type="RayCast2D" parent="RayCasts"]
position = Vector2( 64, -32 )
enabled = true
cast_to = Vector2( 32, 0 )

[node name="Left" type="RayCast2D" parent="RayCasts"]
position = Vector2( 0, -32 )
enabled = true
cast_to = Vector2( -32, 0 )

[node name="Pieces" type="YSort" parent="."]

[node name="SnakePiece" parent="Pieces" instance=ExtResource( 1 )]

[node name="Audio" type="Node2D" parent="."]

[node name="Move" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource( 3 )
volume_db = -3.0

[node name="Death" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource( 4 )
volume_db = 5.0
